@@ -129,6 +129,7 @@ stat_contour <- StatContour$build_accessor()
 stat_density <- StatDensity$build_accessor()
 stat_density2d <- StatDensity2d$build_accessor()
 stat_function <- StatFunction$build_accessor()
+stat_hexbin <- StatHexbin$build_accessor()
 stat_identity <- StatIdentity$build_accessor()
 stat_qq <- StatQq$build_accessor()
 stat_quantile <- StatQuantile$build_accessor()
